--- a/AppData/Local/Packages/Microsoft.WindowsTerminalPreview_8wekyb3d8bbwe/LocalState/settings.json
+++ b/AppData/Local/Packages/Microsoft.WindowsTerminalPreview_8wekyb3d8bbwe/LocalState/settings.json
@@ -4,12 +4,11 @@
     "actions": 
     [
         {
-            "command": "find",
-            "keys": "ctrl+shift+f"
-        },
-        {
-            "command": "paste",
-            "keys": "ctrl+v"
+            "command": 
+            {
+                "action": "prevTab"
+            },
+            "keys": "ctrl+h"
         },
         {
             "command": 
@@ -20,11 +19,12 @@
             "keys": "ctrl+c"
         },
         {
-            "command": 
-            {
-                "action": "prevTab"
-            },
-            "keys": "ctrl+h"
+            "command": "paste",
+            "keys": "ctrl+v"
+        },
+        {
+            "command": "find",
+            "keys": "ctrl+shift+f"
         },
         {
             "command": 
@@ -34,6 +34,18 @@
                 "splitMode": "duplicate"
             },
             "keys": "alt+shift+d"
+        },
+        {
+            "command": "closePane",
+            "keys": "ctrl+alt+q"
+        },
+        {
+            "command": 
+            {
+                "action": "switchToTab",
+                "index": 2
+            },
+            "keys": "ctrl+3"
         },
         {
             "command": "unbound",
@@ -112,15 +124,7 @@
             "keys": "ctrl+r"
         },
         {
-            "command": 
-            {
-                "action": "switchToTab",
-                "index": 2
-            },
-            "keys": "ctrl+3"
-        },
-        {
-            "command": "closePane",
+            "command": "unbound",
             "keys": "ctrl+q"
         },
         {
