--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,9 @@ dotnet_diagnostic.IDE008.severity = none
 dotnet_diagnostic.IDE0130.severity = none
 dotnet_diagnostic.IDE0058.severity = none
 
+#CS8618: Non-nullable property ‘PropertyName’ is uninitialized.
+dotnet_diagnostic.CS8618.severity = none
+
 csharp_style_var_for_built_in_types = false:suggestion
 csharp_style_var_when_type_is_apparent = true:suggestion
 csharp_style_var_elsewhere = false:suggestion
@@ -99,3 +102,6 @@ dotnet_naming_style.prefix_underscore.capitalization = camel_case
 dotnet_naming_style.prefix_underscore.required_prefix = _
 
 csharp_style_namespace_declarations = block_scoped:none
+
+[*Tests.cs]
+dotnet_diagnostic.CA1707.severity = none
